# mk73

./: .gitignore  Cargo.toml  README.md  cert.der  cert.pem  index.html  key.der  key.pem
assets/shaders/: diving_overlay.wgsl
cert/: cert.pem  cert_127.pem  digest.txt  generate.sh  key.pem  key_127.pem  localhost+2-key.pem  localhost+2.pem
client/: Cargo.toml  index.html  styles.css
client/assets/: sprites_css.json  spritesheet.json  spritesheet.tps
client/assets/shaders/: diving_overlay.wgsl  world.wgsl
client/src/: asset.rs  boat.rs  dive.rs  input.rs  main.rs  oil_rig.rs  tcp.rs  ui.rs  weapon.rs  web_utils.rs
common/: Cargo.toml
common/benches/: benchmarking.rs
common/macros/: Cargo.toml
common/macros/src/: helper.rs  lib.rs
common/src/: boat.rs  collision.rs  lib.rs  movement.rs  oil_rig.rs  primitives.rs  protocol.rs  shaders.rs  upgrade.rs  util.rs  weapon.rs  weapons.rs  world.rs
common/src/old/: boat.rs  lib.rs  primitives.rs  shaders.rs  util.rs  weapons.rs  world.rs
server/: Cargo.toml
server/src/: main.rs  net.rs  oil_rig.rs  tcp.rs  weapon.rs
src/: boat.rs  collision.rs  lib.rs  main.rs  oil_rig.rs  primitives.rs  shaders.rs  ship.rs  util.rs  weapons.rs  world.rs
