# [package]
# name = "mk73"
# description = "game, inspiration from https://mk48.io"
# version = "0.1.0"
# edition = "2024"

[workspace]
resolver = "2"
members = ["client", "common", "server"]

[workspace.dependencies]
bevy = {version = "0.18", features = ["debug", "pan_camera"]}
lightyear = {version = "0.26", features = ["netcode", "websocket"]}
serde = "1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
