[workspace]
resolver = "2"
members = ["client", "common", "server"]

[workspace.dependencies]
bevy = {version = "0.18", features = ["debug", "track_location", "pan_camera", "dynamic_linking"]}
lightyear = {version = "0.26", features = ["netcode", "websocket", "input_native"]}
serde = { version = "1", features = ["rc"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
