[package]
name = "client"
version = "0.1.0"
edition = "2024"

[features]
# breaks in certain browsers like firefox
webgpu = ["bevy/webgpu"]

[dependencies]
common = { path = "../common", features = ["client"]}
serde = { workspace = true }
serde_json = "1"
reqwest = "0.13"
tokio = { version = "1", default-features = false, features = ["rt"] }
bevy = { workspace = true, features = ["webp"] }
lightyear = { workspace = true }
rand = "0.10"
getrandom = {version = "0.4.2", features = ["wasm_js"]}  # align with rand
bevy-inspector-egui = "0.36.0"
# bevy_web_keepalive = { git = "https://github.com/Nul-led/bevy_web_keepalive" }
tungstenite = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1"