[package]
name = "common"
version = "0.1.0"
edition = "2024"

[features]
# enable client-related plugin impls
client = []
# enable server-related plugin impls
server = []

[dependencies]
bevy = { workspace = true }
lightyear = {workspace = true}
rand = "0.10"
getrandom = { version = "0.2.17", features = ["js"] }
serde = { workspace = true }
rustls-pemfile = "2"
macros = { path = "./macros", features = ["common_ty"] }
strum = { version = "0.28.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"]}

[[bench]]
name = "benchmarking"
harness = false
