[package]
name = "server"
version = "0.1.0"
edition = "2024"

[features]
# visualize boats Transform on the server
gui = []

[dependencies]
bevy = { workspace = true }
lightyear = {workspace = true }
common = { path = "../common", features = ["server"]}
macros = { path = "../common/macros" }
rand = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { workspace = true }
tungstenite = {workspace = true }
actix-web = "4"
tap = { workspace = true }